--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -1,9 +1,37 @@
-<p>users</p>
-<pre>{{ users | json }}</pre>
-<table>
-    <tr ng-repeat="user in users">
-        <td>{{ user.name }}</td>
-        <td>{{ user.password }}</td>
-        <td><button ui-sref="userEdit({userID: '{{user._id }}' })">Edit</button></td>
-    </tr>
+<div class="page-header">
+	<h1>
+		Users
+		<a ui-sref="userCreate" class="btn btn-default">
+			<span class="glyphicon glyphicon-plus"></span>
+			New User
+		</a>
+	</h1>
+
+</div>
+
+<div class="jumbotron text-center" ng-show="user.processing">
+	<span class="glyphicon glyphicon-repeat spinner"></span>
+	<p>Loading Users...</p>
+</div>
+
+<table class="table table-bordered table-striped" ng-show="users">
+	<thead>
+		<tr>
+			<th>_id</th>
+			<th>Name</th>
+			<th>Username</th>
+			<th class="col-sm-2"></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="person in users">
+			<td>{{ person._id }}</td>
+			<td>{{ person.name }}</td>
+			<td>{{ person.username }}</td>
+			<td class="col-sm-2">
+				<a ui-sref="userEdit({userID: '{{ person._id }}'})" class="btn btn-danger">Edit</a>
+				<a href="#" ng-click="deleteUser(person._id)" class="btn btn-primary">Delete</a>
+			</td>
+		</tr>
+	</tbody>
 </table>
