--- a/app/templates/add-event.html
+++ b/app/templates/add-event.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Username</label>
+		<label class="col-sm-2 control-label">Hours</label>
 		<div class="col-sm-6">
 			<input type="number" class="form-control" ng-model="serviceEvent.hours">
 		</div>
