--- a/app/templates/add-event.html
+++ b/app/templates/add-event.html
@@ -1,8 +1,9 @@
 <div class="page-header">
-	<h1>Add Event</h1>
+	<h1 ng-if="type == 'create'">Create Event</h1>
+	<h1 ng-if="type == 'edit'">Edit Event</h1>
 </div>
 
-<form class="form-horizontal" ng-submit="addEvent()">
+<form class="form-horizontal" ng-submit="saveEvent()">
 
 	<div class="form-group">
 		<label class="col-sm-2 control-label">Name</label>
@@ -19,9 +20,10 @@
 	</div>
 
 	<div class="form-group">
-    	<div class="col-sm-offset-2 col-sm-6">
-    		<button type="submit" class="btn btn-success btn-lg btn-block">Add Event</button>
-    	</div>
+	<div class="col-sm-offset-2 col-sm-6">
+		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="type == 'create'">Create Event</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block" ng-if="type == 'edit'">Update Event</button>
+	</div>
 	</div>
 
 </form>
