--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,5 +1,5 @@
 <form ng-submit = "login()">
-    <input ng-model="userLogin.username" />
-    <input type="password" ng-model="userLogin.password" />
+    <input ng-model="user.username" />
+    <input type="password" ng-model="user.password" />
     <button type="submit" class="btn btn-block btn-primary"><span>Login</span></button>
 </form>
