--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -1,1 +1,22 @@
+<table>
+    <thead>
+        <tr>
+            <th>Event</th>
+            <th>Hours</th>
+            <th>Date</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat = "event in events">
+            <td>{{event.name}}</td>
+            <td>{{event.hours}}</td>
+            <td>{{event.date}}</td>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+
 <pre>user = {{user | json}}</pre>
