--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -1,15 +1,15 @@
-<form>
+<form ng-submit="saveEvent()">
   <div class="form-group">
     <label>Name</label>
-    <input type="text" class="form-control" placeholder="Name">
+    <input ng-model="eventData.name" type="text" class="form-control" placeholder="Name">
   </div>
   <div class="form-group">
     <label>Date</label>
-    <input type="date" class="form-control" placeholder="Date">
+    <input ng-model="eventData.date" type="date" class="form-control" placeholder="Date">
   </div>
   <div class="form-group">
     <label>Hours</label>
-    <input type="number" class="form-control" placeholder="Hours">
+    <input ng-model="eventData.hours" type="number" class="form-control" placeholder="Hours">
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
