--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -5,11 +5,14 @@
   </div>
   <div class="form-group">
     <label>Date</label>
-    <input ng-model="eventData.date" type="date" class="form-control" placeholder="Date">
+    <input ng-model="eventData.date" class="form-control" placeholder="Date">
   </div>
   <div class="form-group">
     <label>Hours</label>
     <input ng-model="eventData.hours" type="number" class="form-control" placeholder="Hours">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+
+  <button type="submit" ng-if="getState() === 'event.edit'" class="btn btn-primary btn-block">Update</button>
+  <button type="submit" ng-if="getState() === 'event.create'" class="btn btn-primary btn-block">Create</button>
+
 </form>
