--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -1,3 +1,11 @@
+<h2>
+    Events
+    <a ui-sref="event.create" class="btn btn-default">
+        <span class="glyphicon glyphicon-plus"></span>
+        New
+	</a>
+</h2>
+
 <table class="table">
     <thead>
         <tr>
@@ -17,8 +25,11 @@
             <td><span class="glyphicon glyphicon-trash" ng-click="removeEvent(event._id, $index)"></span></td>
         </tr>
     </tbody>
+    <tfoot>
+        <td><strong>Total Hours:</strong></td>
+        <td><strong></strong>{{findTotal()}}</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tfoot>
 </table>
-
-<h3>Total Hours: {{findTotal()}}</h3>
-
-<pre>events = {{events | json}}</pre>
