--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -2,7 +2,7 @@
     Events
     <a ui-sref="event.create" class="btn btn-default">
         <span class="glyphicon glyphicon-plus"></span>
-        New
+        Add
 	</a>
 </h2>
 
