--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -1,3 +1,6 @@
+<h2 ng-if="getState() === 'event.create'">Create Event</h2>
+<h2 ng-if="getState() === 'event.edit'">Edit Event</h2>
+
 <form ng-submit="saveEvent()">
   <div class="form-group">
     <label>Name</label>
