--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -17,8 +17,8 @@
 				<input type="password" class="form-control" required ng-model="user.password">
 			</div>
 
-			<div class="alert alert-danger" ng-if="user.error">
-				{{ user.error }}
+			<div class="alert alert-danger" ng-if="error">
+				{{ error }}
 			</div>
 
 			<button type="submit" class="btn btn-block btn-primary">
