front end get events connects to api

--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -27,7 +27,7 @@
     </tbody>
     <tfoot>
         <td><strong>Total Hours:</strong></td>
-        <td><strong></strong>{{findTotal()}}</td>
+        <td><strong></strong>{{totalHours}}</td>
         <td></td>
         <td></td>
         <td></td>
