--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -20,7 +20,7 @@
         <tr ng-repeat="event in events">
             <td>{{event.name}}</td>
             <td>{{event.hours}}</td>
-            <td>{{event.date}}</td>
+            <td>{{event.date | date : 'M/d'}}</td>
             <td><span class="glyphicon glyphicon-wrench" ui-sref="event.edit({eventID: '{{event._id}}' })"></span></td>
             <td><span class="glyphicon glyphicon-trash" ng-click="removeEvent(event._id, $index)"></span></td>
         </tr>
