--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,10 +1,10 @@
-<div class="row col-md-6 col-md-offset-3">
+<div class="row col-md-6 col-md-offset-3 login">
+    <div class="col-sm-12">
+        <img class="img-responsive" src="../images/nhs-logo.jpeg" />
+    </div>
 
-    <img src="../images/nhs-logo.jpeg" />
-
-	<div class="jumbotron">
-		<h1>Login</h1>
-
+    <div class="login-main">
+        <h1>Login</h1>
 		<form ng-submit="login()">
 
 			<div class="form-group">
