--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -33,3 +33,24 @@
         <td></td>
     </tfoot>
 </table>
+
+<h2>
+    Upcoming Events
+</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Event</th>
+            <th>Hours</th>
+            <th>Date</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="event in upcoming">
+            <td>{{event.name}}</td>
+            <td>{{event.hours}}</td>
+            <td>{{event.date | date : 'M/d'}}</td>
+        </tr>
+    </tbody>
+</table>
