--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -1,10 +1,12 @@
 <h2 ng-if="getState() === 'event.create'">Create Event</h2>
 <h2 ng-if="getState() === 'event.edit'">Edit Event</h2>
-
+<pre>{{eventData | json }}</pre>
 <form ng-submit="saveEvent()">
   <div class="form-group">
     <label>Name</label>
-    <input ng-model="eventData.name" type="text" class="form-control" placeholder="Name">
+    <input ng-model="eventData.name" uib-typeahead="uevent.name for uevent in upcoming | limitTo:8 | filter:$viewValue"
+           typeahead-on-select='setUEvent($item)'
+           type="text" class="form-control" placeholder="Name">
   </div>
   <div class="form-group">
     <label>Date</label>
