--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -8,9 +8,15 @@
            typeahead-on-select='setUEvent($item)'
            type="text" class="form-control" placeholder="Name">
   </div>
+   <div uib-datepicker ng-model="eventData.date"></div>
   <div class="form-group">
     <label>Date</label>
-    <input ng-model="eventData.date" class="form-control" placeholder="Date">
+	<span class="input-group">
+	    <input ng-model="eventData.date" class="form-control" placeholder="Date" datepicker-options="{}" uib-datepicker-popup isOpen="true">
+		<span class="input-group-btn">
+			<button type="button" class="btn btn-default" ng-click="popupOpen = !popupOpen"><i class="glyphicon glyphicon-calendar"></i></button>
+		</span>
+	</span>
   </div>
   <div class="form-group">
     <label>Hours</label>
