--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -12,9 +12,9 @@
   <div class="form-group">
     <label>Date</label>
 	<span class="input-group">
-	    <input ng-model="eventData.date" class="form-control" placeholder="Date" datepicker-options="{}" uib-datepicker-popup isOpen="true">
+	    <input ng-model="eventData.date" class="form-control" placeholder="Date">
 		<span class="input-group-btn">
-			<button type="button" class="btn btn-default" ng-click="popupOpen = !popupOpen"><i class="glyphicon glyphicon-calendar"></i></button>
+			<button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
 		</span>
 	</span>
   </div>
