--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -12,17 +12,13 @@
             <th>Event</th>
             <th>Hours</th>
             <th>Date</th>
-            <th>Edit</th>
-            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="event in events">
+        <tr ng-repeat="event in events" ui-sref="event.edit({eventID: '{{event._id}}' })">
             <td>{{event.name}}</td>
             <td>{{event.hours}}</td>
             <td>{{event.date | date : 'M/d'}}</td>
-            <td><span class="glyphicon glyphicon-wrench" ui-sref="event.edit({eventID: '{{event._id}}' })"></span></td>
-            <td><span class="glyphicon glyphicon-trash" ng-click="removeEvent(event._id, $index)"></span></td>
         </tr>
     </tbody>
     <tfoot>
