--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -10,8 +10,8 @@
     <thead>
         <tr>
             <th>Event</th>
-            <th>Hours</th>
-            <th>Date</th>
+            <th><span class="glyphicon glyphicon-hourglass"></span></th>
+            <th><span class="glyphicon glyphicon-calendar"></span></th>
         </tr>
     </thead>
     <tbody>
@@ -24,8 +24,6 @@
     <tfoot>
         <td><strong>Total Hours:</strong></td>
         <td><strong></strong>{{findTotal()}}</td>
-        <td></td>
-        <td></td>
         <td></td>
     </tfoot>
 </table>
