--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -6,12 +6,12 @@
 	</a>
 </h2>
 
-<table class="table">
+<table class="table event-table">
     <thead>
         <tr>
             <th>Event</th>
-            <th><span class="glyphicon glyphicon-hourglass"></span></th>
-            <th><span class="glyphicon glyphicon-calendar"></span></th>
+            <th><span class="glyphicon glyphicon-hourglass"></span> Hours</th>
+            <th><span class="glyphicon glyphicon-calendar"></span> Date</th>
         </tr>
     </thead>
     <tbody>
