--- a/public/templates/uevent.html
+++ b/public/templates/uevent.html
@@ -1,7 +1,5 @@
 <h2 ng-if="getState() === 'uevent.create'">Create Event</h2>
 <h2 ng-if="getState() === 'uevent.edit'">Edit Event</h2>
-<h2 ng-if="getState() === 'uevent.edit'">Edit Event</h2>
-<h2 ng-if="getState() === 'uevent.edit'">Edit Event</h2>
 
 <form ng-submit="saveEvent()">
   <div class="form-group">
@@ -13,12 +11,20 @@
     <input ng-model="eventData.date" class="form-control" placeholder="Date">
   </div>
   <div class="form-group">
-    <label>Hours</label>
-    <input ng-model="eventData.hours" type="number" class="form-control" placeholder="Hours">
+      <label>Location</label>
+      <input ng-model="eventData.location" class="form-control" placeholder="Location">
+  </div>
+  <div class="form-group">
+      <label>Time Start</label>
+      <input ng-model="eventData.timeStart" class="form-control" placeholder="Start Time, like 1:00 PM">
+  </div>
+  <div class="form-group">
+      <label>Time End</label>
+      <input ng-model="eventData.timeEnd" class="form-control" placeholder="End Time, like 4:00 PM">
   </div>
   <div class="form-group">
     <label>Description</label>
-    <textarea ng-model="eventData.description" type="number" class="form-control" placeholder="Description"></textarea>
+    <textarea ng-model="eventData.description" class="form-control" placeholder="Description"></textarea>
   </div>
   <button type="submit" ng-show="getState() === 'uevent.create'" class="btn btn-primary btn-block">Create</button>
   <button type="submit" ng-if="getState() === 'uevent.edit'" class="btn btn-primary btn-block">Update</button>
