--- a/public/default.css
+++ b/public/default.css
@@ -16,20 +16,21 @@ body {
 }
 
 .navbar-header .navbar-brand {
-    display: flex;
-    align-items: center;
+    /*display: flex;
+    align-items: center;*/
 }
 
 .navbar-header .navbar-brand svg {
     fill: #ddd;
 }
 .navbar-header .navbar-brand .glyphicon {
-    top: -1px
+    top: -3px
 }
 
 .navbar-header .navbar-brand span.title {
+    position: relative;
+    top: -8px;
     margin-top: 2px;
-    margin-left: 5px;
     font-weight: bold;
     color: #ddd;
 }
