--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -9,7 +9,13 @@
            type="text" class="form-control" placeholder="Name">
   </div>
    <div uib-datepicker ng-model="eventData.date"></div>
-  <div class="form-group">
+   <div class="form-group">
+     <label>Date</label>
+     <span class="input-group">
+         {{ eventData.date | date : 'longDate' }}
+     </span>
+   </div>
+  <!-- <div class="form-group">
     <label>Date</label>
 	<span class="input-group">
 	    <input ng-model="eventData.date" class="form-control" placeholder="Date">
@@ -17,7 +23,7 @@
 			<button type="button" class="btn btn-default"><i class="glyphicon glyphicon-calendar"></i></button>
 		</span>
 	</span>
-  </div>
+  </div> -->
   <div class="form-group">
     <label>Hours</label>
     <input ng-model="eventData.hours" type="number" step="0.5" class="form-control" placeholder="Hours">
