--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -8,22 +8,22 @@
 		<form ng-submit="signup()">
 			<div class="form-group">
 				<label>First Name</label>
-				<input type="text" required class="form-control" ng-model="signup.firstname">
+				<input type="text" required class="form-control" ng-model="user.firstname">
 			</div>
 
 			<div class="form-group">
 				<label>Last Name</label>
-				<input type="text" required class="form-control" ng-model="signup.lastname">
+				<input type="text" required class="form-control" ng-model="user.lastname">
 			</div>
 
 			<div class="form-group">
 				<label>Username</label>
-				<input type="text" required class="form-control" ng-model="signup.username">
+				<input type="text" required class="form-control" ng-model="user.username">
 			</div>
 
 			<div class="form-group">
 				<label>Password</label>
-				<input type="text" required class="form-control" ng-model="signup.password">
+				<input type="text" required class="form-control" ng-model="user.password">
 			</div>
 			<button class="btn btn-block btn-primary" type="submit">Signup</button>
 		</form>
