date picker aligned and positioned nice and cozy

--- a/public/default.css
+++ b/public/default.css
@@ -17,6 +17,7 @@ body {
 
 .navbar {
     border-radius: 0;
+	margin-bottom: 0;
 }
 
 .navbar-header .navbar-brand {
@@ -53,4 +54,8 @@ body {
 
 .uevent-table .description {
     font-style: italic;
+}
+
+.nhs-date-picker table {
+	margin: 0px auto 10px auto;
 }
