--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -5,11 +5,11 @@
 
     <div class="login-main">
         <h1>Login</h1>
-		<form ng-submit="login()">
+		<form novalidate ng-submit="login()">
 
 			<div class="form-group">
 				<label>Username</label>
-				<input type="text" required class="form-control" ng-model="user.username">
+				<input type="text" class="form-control" required ng-model="user.username">
 			</div>
 
 			<div class="form-group">
