--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -23,7 +23,12 @@
 
 			<div class="form-group">
 				<label>Password</label>
-				<input type="text" required class="form-control" ng-model="user.password">
+				<input type="password" required class="form-control" ng-model="user.password">
+			</div>
+
+			<div class="form-group">
+				<label>Confirm Password</label>
+				<input type="password" required class="form-control" ng-model="user.confirmpassword">
 			</div>
 			<button class="btn btn-block btn-primary" type="submit">Signup</button>
 		</form>
