--- a/public/templates/uevent.html
+++ b/public/templates/uevent.html
@@ -2,30 +2,33 @@
 <h2 ng-if="getState() === 'uevent.edit'">Edit Event</h2>
 
 <form ng-submit="saveEvent()">
-  <div class="form-group">
-    <label>Name</label>
-    <input ng-model="eventData.name" type="text" class="form-control" placeholder="Name">
-  </div>
-  <div class="form-group">
-    <label>Date</label>
-    <input ng-model="eventData.date" class="form-control" placeholder="Date">
-  </div>
-  <div class="form-group">
-      <label>Location</label>
-      <input ng-model="eventData.location" class="form-control" placeholder="Location">
-  </div>
-  <div class="form-group">
-      <label>Time Start</label>
-      <input ng-model="eventData.timeStart" class="form-control" placeholder="Start Time, like 1:00 PM">
-  </div>
-  <div class="form-group">
-      <label>Time End</label>
-      <input ng-model="eventData.timeEnd" class="form-control" placeholder="End Time, like 4:00 PM">
-  </div>
-  <div class="form-group">
-    <label>Description</label>
-    <textarea ng-model="eventData.description" class="form-control" placeholder="Description"></textarea>
-  </div>
-  <button type="submit" ng-show="getState() === 'uevent.create'" class="btn btn-primary btn-block">Create</button>
-  <button type="submit" ng-if="getState() === 'uevent.edit'" class="btn btn-primary btn-block">Update</button>
+	<div class="form-group">
+		<label>Name</label>
+		<input ng-model="eventData.name" type="text" class="form-control" placeholder="Name">
+	</div>
+	<div uib-datepicker ng-model="eventData.date" class="nhs-date-picker"></div>
+    <div class="form-group">
+      <label>Date</label>
+      <span class="input-group">
+          {{ eventData.date | date : 'longDate' }}
+      </span>
+    </div>
+	<div class="form-group">
+		<label>Location</label>
+		<input ng-model="eventData.location" class="form-control" placeholder="Location">
+	</div>
+	<div class="form-group">
+		<label>Time Start</label>
+		<input ng-model="eventData.timeStart" class="form-control" placeholder="Start Time, like 1:00 PM">
+	</div>
+	<div class="form-group">
+		<label>Time End</label>
+		<input ng-model="eventData.timeEnd" class="form-control" placeholder="End Time, like 4:00 PM">
+	</div>
+	<div class="form-group">
+		<label>Description</label>
+		<textarea ng-model="eventData.description" class="form-control" placeholder="Description"></textarea>
+	</div>
+	<button type="submit" ng-show="getState() === 'uevent.create'" class="btn btn-primary btn-block">Create</button>
+	<button type="submit" ng-if="getState() === 'uevent.edit'" class="btn btn-primary btn-block">Update</button>
 </form>
