--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,6 +1,6 @@
 <div class="row col-md-6 col-md-offset-3 login">
     <div class="col-sm-12">
-        <img class="img-responsive" src="../images/nhs-logo.jpeg" />
+        <img class="img-responsive" src="../images/nhslogo.svg" />
     </div>
 
     <div class="login-main">
