--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -44,7 +44,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="event in upcoming">
+        <tr ng-repeat="event in upcoming | limitTo:6">
             <td>
                 <div>
                     <b>{{event.name}}</b>
