--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -6,7 +6,7 @@
 	</a>
 </h2>
 
-<table class="table event-table">
+<table class="table clickable-table">
     <thead>
         <tr>
             <th>Event</th>
