--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -2,19 +2,19 @@
     Member List
 </h2>
 
-<table class="table">
+<table class="table clickable-table">
     <thead>
         <tr>
             <th>Name</th>
-            <th>Checked</th>
 			<th>Total Hours</th>
+            <th>Checked</th>
         </tr>
     </thead>
     <tbody>
         <tr ng-repeat="member in members" ui-sref="singleMember({memberID: member._id})">
             <td>{{member.firstname + " " + member.lastname}}</td>
-            <td>{{member.checked}}</td>
-			<td>{{member.totalHours}}</td>
+            <td>{{member.totalHours}}</td>
+            <td><span ng-class="{'glyphicon-ok': member.checked }" class="glyphicon"></span></td>
         </tr>
     </tbody>
 </table>
