--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -18,7 +18,7 @@
         <tr ng-repeat="event in events" ui-sref="event.edit({eventID: '{{event._id}}' })">
             <td>{{event.name}}</td>
             <td>{{event.hours}}</td>
-            <td>{{event.date | date : 'M/d'}}</td>
+            <td>{{event.date | date : 'EEE, MMM, d'}}</td>
         </tr>
     </tbody>
     <tfoot>
