--- a/public/templates/single-member.html
+++ b/public/templates/single-member.html
@@ -1,6 +1,6 @@
 <div class="has-button-bar">
 
-<h2>{{ member.name }}</h2>
+<h2>{{ member.firstname + " " + member.lastname }}</h2>
 
 <h4>
     Events
