add placeholder jawn

--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -18,7 +18,7 @@
 
 			<div class="form-group">
 				<label>Username</label>
-				<input type="text" required class="form-control" name="username" ng-model="user.username">
+				<input type="text" required class="form-control" name="username" ng-model="user.username" placeholder="Use your school 'z' username">
 			</div>
             <div class="invalid-message" ng-show="signupForm.username.usernameTaken">
                 Username taken
