Edit upcoming events

--- a/public/default.css
+++ b/public/default.css
@@ -67,6 +67,10 @@ body {
     font-style: italic;
 }
 
+.uevent-table .edit span {
+    margin-right: 3px;
+}
+
 .nhs-date-picker table {
 	margin: 0px auto 10px auto;
 }
