filter only on the name in autocompelte

--- a/public/templates/event.html
+++ b/public/templates/event.html
@@ -6,7 +6,7 @@
 <form ng-submit="saveEvent()">
   <div class="form-group">
     <label>Name</label>
-    <input ng-model="eventData.name" uib-typeahead="uevent.name for uevent in upcoming | limitTo:8 | filter:$viewValue"
+    <input ng-model="eventData.name" uib-typeahead="uevent.name for uevent in upcoming | limitTo:8 | filter: {'name': $viewValue }"
            typeahead-on-select='setUEvent($item)'
            type="text" class="form-control" placeholder="Name">
   </div>
