--- a/public/templates/members.html
+++ b/public/templates/members.html
@@ -4,14 +4,23 @@
 
 <table class="table clickable-table">
     <thead>
-        <tr>
-            <th>Name</th>
-			<th>Total Hours</th>
-            <th>Checked</th>
+        <tr class="member-list-header filtertable">
+            <th>Name
+                <span class="glyphicon" ng-click="reverse = !reverse" ng-show="propertyName === 'lastname'" ng-class="{'glyphicon-triangle-top': reverse, 'glyphicon-triangle-bottom': !reverse}"></span>
+                <span class="glyphicon glyphicon-filter" ng-click="propertyName = 'lastname'" ng-show="propertyName !== 'lastname'"></span>
+            </th>
+			<th>Hours
+                <span class="glyphicon" ng-click="reverse = !reverse" ng-show="propertyName === 'totalHours'" ng-class="{'glyphicon-triangle-top': reverse, 'glyphicon-triangle-bottom': !reverse}"></span>
+                <span class="glyphicon glyphicon-filter" ng-click="propertyName = 'totalHours'" ng-show="propertyName !== 'totalHours'"></span>
+            </th>
+            <th>Checked
+                <span class="glyphicon" ng-click="reverse = !reverse" ng-show="propertyName === 'checked'" ng-class="{'glyphicon-triangle-top': reverse, 'glyphicon-triangle-bottom': !reverse}"></span>
+                <span class="glyphicon glyphicon-filter" ng-click="propertyName = 'checked'" ng-show="propertyName !== 'checked'"></span>
+            </th>
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="member in members" ui-sref="singleMember({memberID: member._id})">
+        <tr ng-repeat="member in members | orderBy:propertyName:reverse" ui-sref="singleMember({memberID: member._id})">
             <td>{{member.firstname + " " + member.lastname}}</td>
             <td>{{member.totalHours}}</td>
             <td><span ng-class="{'glyphicon-ok': member.checked }" class="glyphicon"></span></td>
