--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -10,8 +10,8 @@
     <thead>
         <tr>
             <th>Event</th>
-            <th><span class="glyphicon glyphicon-hourglass"></span> Hours</th>
-            <th><span class="glyphicon glyphicon-calendar"></span> Date</th>
+            <th><span class="glyphicon glyphicon-hourglass"></span> <span class="hide-when-small">Hours</span> </th>
+            <th><span class="glyphicon glyphicon-calendar"></span> <span class="hide-when-small">Date</span> </th>
         </tr>
     </thead>
     <tbody>
