--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -44,7 +44,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="event in upcoming | limitTo:25">
+        <tr ng-repeat="event in upcoming | limitTo:25 | filter: { eventOver: false }">
             <td>
                 <div>
                     <b>{{event.name}}
