--- a/public/default.css
+++ b/public/default.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+
 .login {
     margin-top: 50px;
 }
@@ -17,6 +19,7 @@
 
 body {
     padding-bottom: 6px;
+    font-family: 'Roboto';
 }
 
 .navbar {
