made add hide on small screen

--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -2,7 +2,7 @@
     Events
     <a ui-sref="event.create" class="btn btn-default">
         <span class="glyphicon glyphicon-plus"></span>
-        Add
+        <span>Add</span>
 	</a>
 </h2>
 
@@ -32,7 +32,7 @@
     Upcoming Events
     <a ng-if="user.admin" ui-sref="uevent.create" class="btn btn-default">
         <span class="glyphicon glyphicon-plus"></span>
-        Add
+        <span class="hide-when-small">Add</span>
     </a>
 </h2>
 
