--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -32,7 +32,7 @@
 							c-1.77,1.204-3.256,2.613-4.365,4.395C8.566,6.333,9.785,4.642,11.33,3.103z"/>
 					</g>
 				</svg></span>
-				<span class="title">NHS</span></a>
+				<span class="title">TTC</span></a>
 		</div>
 		<div class="collapse navbar-collapse" id="navbar-collapse-target">
 			<ul class="nav navbar-nav">
