--- a/public/default.css
+++ b/public/default.css
@@ -101,7 +101,11 @@ body {
     bottom: 0; left: 0; right: 0;
     padding: 10px;
 }
-
+@media screen and (max-height: 620px) {
+    footer {
+        display: none;
+    }
+}
 div.has-button-bar {
     padding-bottom: 54px;
 }
@@ -142,4 +146,18 @@ div.has-button-bar {
 .filtertable th .glyphicon.glyphicon-triangle-bottom {
     top: 3px;
     left: 2px;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #272727;
+    color: #8e8e8e;
+    text-align: right;
+}
+footer p {
+    margin: 0;
+    margin-right: 14px;
+    font-size: 10px;
 }
